--- a/IntegerTree/IntegerTree.csproj
+++ b/IntegerTree/IntegerTree.csproj
@@ -5,4 +5,8 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Lab1\CustomGenerics.csproj" />
+  </ItemGroup>
+
 </Project>
