--- a/API/API.csproj
+++ b/API/API.csproj
@@ -4,5 +4,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Lab1\CustomGenerics.csproj" />
+  </ItemGroup>
+
 
 </Project>
